@@ -5,6 +5,7 @@
 3. Correctly set 'storeLyricsInMpdDir' config item, UI was setting wrong config
    item.
 4. Set minimum Qt5 version to 5.11
+7. Align path construction in Utils::systemDir() and Utils::helper()
 
 2.4.1
 -----
